# stm32f103-template

./: .clangd  CMakeLists.txt
cmake/: CMakeListsForRTT.txt  arm-none-eabi-gcc.cmake  bsp.cmake  compiler-flags.cmake  cortex-m3.cmake  gcc-flags.cmake  stm32f103zet6.cmake
firmware/: CMakeLists.txt
firmware/cmsis/src/: startup_stm32f10x_hd.c  startup_stm32f10x_hd.s
include/: trace.h
lds/: memory.lds  sections.lds  stm32f103zet6.lds
src/: CMakeLists.txt  main.c  syscall.c
src/arch/: CMakeLists.txt
src/arch/include/: arch.h  arch_feature.h
src/arch/src/: arch.c
src/backtrace/: CMakeLists.txt
src/backtrace/include/: backtrace.h
src/backtrace/src/: backtrace.c  libunwind.h
src/firmware/: CMakeLists.txt  assert_failed.c
src/firmware/include/: firmware.h
src/firmware/src/: assert_failed.c  handlers.c
src/lib/: CMakeLists.txt
src/lib/include/: bitops.h  mpmc.h  rbuf.h  utils.h
src/lib/include/impl/: mpmc_decl.h  rbuf_decl.h
src/lib/src/: mpmc.c  mpmc_impl.h  rbuf.c  rbuf_impl.h
src/log/: CMakeLists.txt
src/log/include/: log.h
src/log/src/: log_rtt.c
src/newlib/: CMakeLists.txt  firmware.c  startup.c  syscall.c
src/newlib/src/: syscall.c
src/sanitizer/: CMakeLists.txt
src/sanitizer/src/: ubsan.c  ubsan.h  ubsan_report.c
src/trace/: trace_dummy.c
